log/build_2023-11-07_13-13-02/robu/stderr.log
  File "/home/robu/work/robu_ct_ws/install/robu/lib/python3.10/site-packages/robu/ex10_wallfollower.py", line 69
    if self.valid lidar data: 
                  ^^^^^
SyntaxError: invalid syntax

